--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,40 @@
 version: "3"
 
 services:
-  bot:
+  app:
     build: .
+    container_name: app
+    env_file:
+      - .env
+    depends_on:
+      - influxdb
+
+  influxdb:
+    image: influxdb:2.1
+    container_name: influx
+    volumes:
+      - ./data/influxdb2:/var/lib/influxdb2
+      - ./data/influxdb2-config:/etc/influxdb2
+    ports:
+      - 8086:8086
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_ADMIN_USERNAME:-admin}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_ADMIN_PASSWORD:-admin}
+      - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG:-my-token}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET:-my-bucket}
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_TOKEN:-my-token}
 
   grafana:
     image: grafana/grafana-oss:8.3.3
     container_name: grafana
     restart: always
     volumes:
-      - grafana-storage:/var/lib/grafana
+      - ./data/grafana:/var/lib/grafana
     depends_on:
       - influxdb
     ports:
       - 3000:3000
-
-  influxdb:
-    image: influxdb:2.1
-    container_name: influx
-    volumes:
-      - ./data:/root/.influxdbv2
-    ports:
-      - 8086:8086
 
 volumes:
   grafana-storage:
